--- a/prospan-new/css/style.css
+++ b/prospan-new/css/style.css
@@ -746,10 +746,10 @@ ol {
 }
 
 .where-to-buy__bottom {
-  background-color: #2894cf;
-  padding: 10px 20px;
+  background-color: #004494;
+  padding: 15px 25px;
   font-size: 30px;
-  border-radius: 20px;
+  border-radius: 10px;
   text-align: center;
   color: white;
   box-shadow: -1px 4px 5px 0px rgba(107, 107, 107,1);
