--- a/Tansilotren-Ukraine/css/style.css
+++ b/Tansilotren-Ukraine/css/style.css
@@ -353,8 +353,8 @@ div {
 }
 
 .shitty-style {
-  margin-top: 20px;
-  text-indent: 10px;
+  margin-top: 30px;
+  /*text-indent: 10px;*/
 }
 
 .counter {
