--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -212,11 +212,6 @@ div {
   width: 30px;
   height: 30px;
 }
-
-.test-test {
-  position: relative;
-  top: 200px
-}
 .header-main-center p:nth-child(1) {
   margin-left: 10px;
 }
@@ -244,6 +239,11 @@ div {
   height: 50px;
   display: flex;
   align-items: center;
+}
+
+.test-test {
+  position: relative;
+  top: 200px
 }
 
 .header-custom {
@@ -350,6 +350,11 @@ div {
 .block-2__plate:nth-child(4) {
   background: url('../images/icon_plus_04_160x187px.png') no-repeat center /
     contain;
+}
+
+.shitty-style {
+  margin-top: 30px;
+  /*text-indent: 10px;*/
 }
 
 .counter {
@@ -787,7 +792,7 @@ h2 b {
 .block-5__plate:nth-child(5) .block-5__img {
   background: url('../images/div_02 (1).png') no-repeat center / contain !important;
 }
-.block-5__plate:nth-child(6) .block-5__img {
+.block-5__plate:nth-child(7) .block-5__img {
   background: url('../images/div_01 (1).png') no-repeat center / contain !important;
 }
 .block-5__plate:nth-child(9) .block-5__img {
