--- a/Tansilotren/css/style.css
+++ b/Tansilotren/css/style.css
@@ -786,6 +786,10 @@ h2 b {
   top: -45px;
 }
 
+.strange-p {
+  margin-top: 30px !important;
+}
+
 .block-5__plate:nth-child(4) .block-5__img {
   background: url('../images/div_01.png') no-repeat center / contain !important;
 }
