--- a/influcid-AZ/css/style.css
+++ b/influcid-AZ/css/style.css
@@ -112,6 +112,11 @@ sup {font-size:xx-small; vertical-align:super;}
   background-color: transparent;
 }
 
+.desctop-navigation {
+  display: flex;
+  align-items: center;
+}
+
 .navigation {
   position: fixed;
   top: 0;
@@ -183,7 +188,7 @@ sup {font-size:xx-small; vertical-align:super;}
   background-color: #88c168;
   color: white;
   padding: 10px;
-  /*min-height: 10vh;*/
+  min-height: 10vh;
 }
 
 .App-header .header-block-2 {
@@ -225,6 +230,13 @@ sup {font-size:xx-small; vertical-align:super;}
   /*margin-top: -12vh;*/
   width: 100%;
   background: url("../images/first img.jpg") no-repeat center / cover;
+}
+
+.main-img-container-ru {
+  min-height: 90vh;
+  /*margin-top: -12vh;*/
+  width: 100%;
+  background: url("../images/first img2.jpg") no-repeat center / cover;
 }
 
 .App-link {
@@ -448,9 +460,9 @@ sup {font-size:xx-small; vertical-align:super;}
   flex-direction: column;
   align-items: center;
   padding: 25px 0;
-  -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  /*-webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
-  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);*/
 }
 
 .block-5 {
@@ -458,11 +470,11 @@ sup {font-size:xx-small; vertical-align:super;}
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f2f2f3;
+  /*background-color: #f2f2f3;*/
   padding: 25px 0;
-  -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  /*-webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
-  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);*/
 }
 
 
@@ -659,9 +671,9 @@ sup {font-size:xx-small; vertical-align:super;}
   max-width: 80%;
   margin: auto;
   margin-top: 10px;
+  background-color: #f2f2f3;
   border-radius: 10px;
   color: #212121;
-  background-color: #fff;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
@@ -703,6 +715,10 @@ sup {font-size:xx-small; vertical-align:super;}
   font-size: 15px;
 }
 
+.product-en {
+	background: url("../images/INFLU_60.png") no-repeat center/contain;
+}
+
 .block-6 {
   width: 100vw;
   margin: auto;
@@ -710,6 +726,7 @@ sup {font-size:xx-small; vertical-align:super;}
   -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
+  background-color: #f2f2f3;
 }
 
 .block-6__container {
@@ -747,44 +764,8 @@ sup {font-size:xx-small; vertical-align:super;}
 }
 
 
-
-
-
-.apt-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.apt-container a {
-  width: 200px;
-  height: 100px;
-  margin: 20px;
-  padding: 5px;
-  border-radius: 20px;
-  background: url("../images/aptekonline_kanon.jpg") no-repeat;
-  background-position: center !important;
-  background-size: 80% !important;
-    background-color: white !important;
-    box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
-}
-
-.apt-container a:nth-child(2) {
-  background: url("../images/zeferan.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(3) {
-  background: url("../images/aptekstore.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(4) {
-  background: url("../images/ozonaptek.jpg") no-repeat center / contain;
-}
-.apt-container a:nth-child(5) {
-  background: url("../images/melhem.jpg") no-repeat center / contain;
-}
-
 .block-7 {
-  background-color: #f2f2f3;
+  background-color: white;
   padding: 25px 0;
   -webkit-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
   -moz-box-shadow: -1px 4px 5px 0px rgba(224,224,224,1);
@@ -795,7 +776,7 @@ sup {font-size:xx-small; vertical-align:super;}
   height: 300px;
   width: 80%;
   margin: auto;
-  background: url("../images/map.jpg") no-repeat center / cover;
+  background: url("../images/map.png") no-repeat center / cover;
 }
 
 .block-7__text {
@@ -901,7 +882,7 @@ html {
 .disclamer-tra p {
   margin-bottom: 0;
   color: grey;
-  font-family: 'Roboto-Light';
+  /*font-family: 'Roboto-Light';*/
 }
 
 .disclamer-tra .logos-container {
@@ -945,11 +926,11 @@ html {
 }
 
 .disclamer-warning p {
-  font-size: 120px;
+  font-size: 150px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
-  font-family: 'Akrobat';
+  font-family: 'Yanone Kaffeesatz';
 }
 /*/////disclamer-end*/
 
@@ -1411,12 +1392,12 @@ html {
     color: black;
     text-decoration: none;
 }
-#menu li:last-child a {
-  border: 1px solid grey;
-  padding: 10px;
-  border-radius: 10px;
-  margin-left: 10px;
-}
+/*#menu li:last-child a {*/
+/*  border: 1px solid grey;*/
+/*  padding: 10px;*/
+/*  border-radius: 10px;*/
+/*  margin-left: 10px;*/
+/*}*/
 
 
 
@@ -1428,7 +1409,7 @@ html {
     content: "";
     margin: auto;
 }
-.desctop-navigation a:last-child {
+.desctop-navigation .lang {
   border: 1px solid grey;
   padding: 10px;
   border-radius: 10px;
@@ -1525,94 +1506,3 @@ html {
 /*  border-radius: 30px;*/
 /*}*/
 
-.alert-license {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.75 );
-  color: white;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-}
-.alert-license p {
-  font-size: 14px;
-  margin: 0;
-}
-
-.alert-license a {
-  text-decoration: none;
-  color: white;
-  text-align: left;
-}
-
-.alert-license b {
-  text-decoration: underline;
-}
-
-.alert-license .license-off {
-  background-color: white;
-  padding: 10px 5px;
-  border-radius: 20px;
-  margin: 0 100px;
-}
-
-.alert-license button p {
-  color: #43781F;
-}
-
-.license {
-  text-align: left;
-  /*margin: auto;*/
-  color:rgb(51, 51, 51);
-  position: absolute;
-  padding: 50px;
-  font-family: Arial, sans-serif;
-}
-
-
-.license div {
-  width: 70%;
-  margin: auto;
-}
-
-.license strong {
-  font-size: 22px;
-  line-height: 24px;
-  margin: 20px 0 !important;
-  display: block;
-}
-
-.license p {
-  font-size: 14px;
-  margin: 0;
-
-}
-
-.license-off p {
-  text-decoration: underline;
-  padding: 0 15px;
-}
-
-
-.hide {
-  display: none;
-}
-
-@media screen and (max-width: 680px) {
-  .alert-license a {
-    font-size: 9px;
-  }
-  .alert-license .license-off {
-    margin: 5px;
-    padding: 5px;
-  }
-  .alert-license .license-off p {
-    font-size: 9px;
-  }
-  .license div {
-    width: 100%;
-  }
-}
