--- a/Tansilotren-LT/css/style.css
+++ b/Tansilotren-LT/css/style.css
@@ -555,6 +555,11 @@ h2 b {
 .apt-container a:nth-child(3) {
   background: url("../images/icon_03_apteki_LT.jpg") no-repeat center / contain;
 }
+.apt-container a:nth-child(4) {
+  background: url("../images/icon_04_apteki_LT.jpg") no-repeat center / contain;
+}
+
+
 
 .block-4-inner {
   width: 60vw;
