--- a/influcid-LT/css/style.css
+++ b/influcid-LT/css/style.css
@@ -21,6 +21,24 @@
     box-sizing: border-box;
 }
 
+
+.main-img-container_utm {
+  background-image: url('../images/woman_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
+.main-img-container_utm-man {
+  background-image: url('../images/man_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
 body {
     overflow-x: hidden;
     overflow-y: scroll;
@@ -1192,6 +1210,15 @@ html {
 
   .logo {
     font-size: 25px;
+  }
+
+  .main-img-container_utm {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
+  .main-img-container_utm-man {
+    min-height: 34vh;
+    margin-top: 2vh;
   }
 
   .panel ul {
