--- a/influcid-Moldova/css/style.css
+++ b/influcid-Moldova/css/style.css
@@ -21,6 +21,25 @@
     box-sizing: border-box;
 }
 
+
+.main-img-container_utm {
+  background-image: url('../images/woman_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
+.main-img-container_utm-man {
+  background-image: url('../images/man_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
 body {
     overflow-x: hidden;
     overflow-y: scroll;
@@ -1315,6 +1334,16 @@ html {
     flex-direction: column;
   }
 
+
+
+  .main-img-container_utm {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
+  .main-img-container_utm-man {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
   .block-2__image {
     width: 100%;
     height: 350px;
