--- a/influcid-RU/css/style.css
+++ b/influcid-RU/css/style.css
@@ -20,6 +20,23 @@
 * {
     box-sizing: border-box;
 }
+.main-img-container_utm {
+  background-image: url('../images/woman_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
+.main-img-container_utm-man {
+  background-image: url('../images/man_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
 
 body {
     overflow-x: hidden;
@@ -1315,6 +1332,15 @@ html {
     width: 100%;
     height: 350px;
     margin-bottom: 50px;
+  }
+
+  .main-img-container_utm {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
+  .main-img-container_utm-man {
+    min-height: 34vh;
+    margin-top: 2vh;
   }
 
 
