--- a/influcid-Uzbekistan/css/style.css
+++ b/influcid-Uzbekistan/css/style.css
@@ -21,6 +21,26 @@
     box-sizing: border-box;
 }
 
+
+
+.main-img-container_utm {
+  background-image: url('../images/woman_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
+.main-img-container_utm-man {
+  background-image: url('../images/man_img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  min-height: 90vh;
+}
+
 body {
     overflow-x: hidden;
     overflow-y: scroll;
@@ -1106,6 +1126,15 @@ html {
     display: none;
   }
 
+
+  .main-img-container_utm {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
+  .main-img-container_utm-man {
+    min-height: 34vh;
+    margin-top: 2vh;
+  }
 
   #comp_wgt {
     width: 100% !important;
