--- a/Tansilotren-LT/css/style.css
+++ b/Tansilotren-LT/css/style.css
@@ -558,7 +558,9 @@ h2 b {
 .apt-container a:nth-child(4) {
   background: url("../images/icon_04_apteki_LT.jpg") no-repeat center / contain;
 }
-
+.apt-container a:nth-child(5) {
+  background: url("../images/100 metu_logo.jpg") no-repeat center / contain;
+}
 
 
 .block-4-inner {
