--- a/Owey/css/style.css
+++ b/Owey/css/style.css
@@ -1382,6 +1382,10 @@ button {
   .plate_styling-empty {
     display: none;
   }
+  h1 {
+    font-size: 28px;
+    line-height: 38px;
+  }
 
   .big-plate {
     flex-direction: column-reverse;
