--- a/Owey/css/style.css
+++ b/Owey/css/style.css
@@ -93,6 +93,7 @@ p {
 
 .active {
   color: #2F80ED !important;
+  font-family: 'MB' !important;
 }
 
 div {
@@ -176,7 +177,7 @@ div {
 .puppet {
 	position: absolute;
 	height: 100vh;
-	margin-top: -7vh;
+	margin-top: -20vh;
 	/*width: 100vw*/
 }
 
@@ -1152,6 +1153,10 @@ h4 {
 
 
 
+.on-hover_active {
+  background-color: #2F80ED !important;
+}
+
 
 
 
@@ -1165,11 +1170,11 @@ h4 {
 
 .block-3_plate .on-hover:hover {
   transition: opacity 0.3s ease-out 0.1s;
-  opacity: 0.8;
+  opacity: 0;
 }
 .on-hover {
   transition: opacity 0.3s ease-out 0.1s;
-  opacity: 0;
+  opacity: 0.8;
   width: 100%;
   height: 100%;
   z-index: 1;
@@ -1317,14 +1322,6 @@ button {
 .content-container textarea {
   padding: 10px;
   height: 200px;
-}
-/*puppet for ancor*/
-
-.puppet {
-  position: absolute;
-  height: 100vh;
-  margin-top: -7vh;
-  /*width: 100vw*/
 }
 
 .footer-container {
