--- a/Owey/css/style.css
+++ b/Owey/css/style.css
@@ -1620,7 +1620,7 @@ button {
     /*background: url(../images/fon_photo1.jpg) no-repeat center / cover;*/
     height: 400px;
     padding-top: 0;
-    margin-top: 0;
+    margin-top: 80px;
   }
 
 
